--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "glob": "^11.0.0",
     "nuxt": "^3.15.0",
     "vue": "latest",
     "vue-router": "latest"
